[gd_scene load_steps=25 format=2]

[ext_resource path="res://ASSETS/Art/Magician-Magi_Witch/Magician-Magi-Witch/Individual PNG/MainCharacter_LW_F7.png" type="Texture" id=1]
[ext_resource path="res://ASSETS/Art/Magician-Magi_Witch/Magician-Magi-Witch/Individual PNG/MainCharacter_LW_F8.png" type="Texture" id=2]
[ext_resource path="res://ASSETS/Art/Magician-Magi_Witch/Magician-Magi-Witch/Individual PNG/MainCharacter_LW_F5.png" type="Texture" id=3]
[ext_resource path="res://SCENES/Scripts/Player.gd" type="Script" id=4]
[ext_resource path="res://Tilemap Images/Asset/light.png" type="Texture" id=5]
[ext_resource path="res://ASSETS/Audio/potionDrinkingSound.wav" type="AudioStream" id=6]
[ext_resource path="res://ASSETS/Art/Magician-Magi_Witch/Magician-Magi-Witch/Individual PNG/MainCharacter_LW_F6.png" type="Texture" id=7]
[ext_resource path="res://ASSETS/Art/Magician-Magi_Witch/Magician-Magi-Witch/Individual PNG/MainCharacter_LW_F11.png" type="Texture" id=8]
[ext_resource path="res://ASSETS/Art/Magician-Magi_Witch/Magician-Magi-Witch/Individual PNG/MainCharacter_LW_F3.png" type="Texture" id=9]
[ext_resource path="res://ASSETS/Art/Magician-Magi_Witch/Magician-Magi-Witch/Individual PNG/MainCharacter_LW_F4.png" type="Texture" id=10]
[ext_resource path="res://ASSETS/Art/Magician-Magi_Witch/Magician-Magi-Witch/Individual PNG/MainCharacter_LW_F15.png" type="Texture" id=11]
[ext_resource path="res://ASSETS/Art/Magician-Magi_Witch/Magician-Magi-Witch/Individual PNG/MainCharacter_LW_F13.png" type="Texture" id=12]
[ext_resource path="res://ASSETS/Art/Magician-Magi_Witch/Magician-Magi-Witch/Individual PNG/MainCharacter_LW_F1.png" type="Texture" id=13]
[ext_resource path="res://ASSETS/Art/Magician-Magi_Witch/Magician-Magi-Witch/Individual PNG/MainCharacter_LW_F9.png" type="Texture" id=14]
[ext_resource path="res://ASSETS/Art/Magician-Magi_Witch/Magician-Magi-Witch/Individual PNG/MainCharacter_LW_F14.png" type="Texture" id=15]
[ext_resource path="res://ASSETS/Art/Magician-Magi_Witch/Magician-Magi-Witch/Individual PNG/MainCharacter_LW_F2.png" type="Texture" id=16]
[ext_resource path="res://ASSETS/Art/Magician-Magi_Witch/Magician-Magi-Witch/Individual PNG/MainCharacter_LW_F10.png" type="Texture" id=17]
[ext_resource path="res://ASSETS/Art/Magician-Magi_Witch/Magician-Magi-Witch/Individual PNG/MainCharacter_LW_F12.png" type="Texture" id=18]
[ext_resource path="res://ASSETS/Art/Magician-Magi_Witch/Magician-Magi-Witch/Individual PNG/MainCharacter_LW_F16.png" type="Texture" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
<<<<<<< HEAD:Player.tscn
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "light_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 7 ), ExtResource( 12 ), ExtResource( 3 ) ],
=======
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 13 ) ],
>>>>>>> master2:SCENES/Player.tscn
"loop": true,
"name": "walk_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
<<<<<<< HEAD:Player.tscn
"name": "walk_up",
=======
"name": "light_left",
>>>>>>> master2:SCENES/Player.tscn
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "light_down",
"speed": 5.0
}, {
<<<<<<< HEAD:Player.tscn
"frames": [ ExtResource( 11 ), ExtResource( 2 ), ExtResource( 11 ), ExtResource( 1 ) ],
=======
"frames": [ ExtResource( 3 ), ExtResource( 7 ), ExtResource( 15 ) ],
"loop": true,
"name": "light left",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 7 ), ExtResource( 3 ) ],
>>>>>>> master2:SCENES/Player.tscn
"loop": true,
"name": "walk_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 16 ), ExtResource( 13 ) ],
"loop": true,
"name": "walk_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "light_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "light_up",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 73, 65 )

[sub_resource type="OccluderPolygon2D" id=3]
cull_mode = 1
polygon = PoolVector2Array( -8.26788, 0.627165, 35, 19.287, -19.3393, 0.0481396, 35, -19.84 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 350, 180, 350, -190 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 75, 75 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 4 )
speed = 200

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
animation = "light_up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 18, 15 )
shape = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
show_behind_parent = true
position = Vector2( 50, -5 )
texture = ExtResource( 5 )
color = Color( 1, 1, 0.819608, 1 )
energy = 2.0
shadow_enabled = true
shadow_gradient_length = 3.0
shadow_filter = 3
shadow_filter_smooth = 3.0

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2( 50, -5 )
rotation = 4.71239
occluder = SubResource( 3 )

[node name="FlashlightBeam" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="FlashlightBeam"]
position = Vector2( 50, -5 )
rotation = 4.71239
shape = SubResource( 4 )

[node name="HurtTimer" type="Timer" parent="."]
one_shot = true

[node name="PotionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = 1.0

[node name="Hitbox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 18, 15 )
shape = SubResource( 2 )

[node name="InteractionArea" type="Area2D" parent="."]
visible = false
position = Vector2( 1.19751, 0 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2( 100, 0 )
shape = SubResource( 5 )
[connection signal="directionChanged" from="." to="." method="_on_Player_directionChanged"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_HurtTimer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_entered" from="InteractionArea" to="." method="_on_InteractionArea_area_entered"]
[connection signal="area_exited" from="InteractionArea" to="." method="_on_InteractionArea_area_exited"]
